feat: Added Optimization and Analysis Module